Fix: 백오피스 API 분리 및 수정